2002-01-03  Jody Goldberg <jody@gnome.org>

	* src/xml-io.c (xml_read_style_condition_chain) : no need to unref
	  expr.

2002-01-02  Zbigniew Chyla  <cyba@gnome.pl>

	* src/sheet-object-widget.c (sheet_widget_checkbox_construct_with_ref):
	Marked string for translation.

2002-01-01  Jody Goldberg <jody@gnome.org>

	* src/GNOME_Gnumeric.xml : Add some missing ...
	rename 'Summary' -> 'Properties'

	* src/workbook-control-gui.c : ditto.

2001-12-31  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/main.c : describe geometry option
	* src/analysis-tools.c (anova_two_factor_with_r_tool) : streamline
	  label output (don't overwrite cells)

2001-12-31  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump.  We won't branch 1.1
	  until the gnome2 port links.

2001-12-31  Jody Goldberg <jody@gnome.org>

	* Release 1.0.0

2001-12-31  Jody Goldberg <jody@gnome.org>

	* src/sheet-autofill.c (in_list) : remove pointless checking for lists
	  in english and another language.

	* src/sheet-object-widget.c (sheet_widget_checkbox_read_xml) : do not
	  set the sheet here.  That happens latter.  Handle no input smoothly.
	(sheet_widget_checkbox_write_xml) : handle no input smoothly.

	* src/format.c (append_second_elapsed) : use doubles.
	(append_minute_elapsed) : use unsigned long.
	(append_hour_elapsed) : use unsigned long.

	* src/commands.c (cmd_insert_rows) : avoid using g_strdup_printf.  It
	  does not support positional arguments, which makes translation
	  difficult.
	(cmd_insert_cols) : ditto.

	* src/auto-correct.c (autocorrect_tool) : ispunct is too liberal for
	  what we want. Use a translated set of names for the capitalization.

	* src/GNOME_Gnumeric.xml : sync with non-bonobo text and fix some
	  mis-named items.  disable the combo and list until 1.0.1

	* src/cell.h : fix warning on s390
	* src/collect.h : ditto.
	* src/parse-util.h : ditto.
	* src/gnumeric.h : ditto.
	* src/style.h : ditto.
	* src/consolidate.h : ditto.
